# Opentrickler_ML

./: .gitignore  CMakeLists.txt  README.md  RELEASE_VERSION  configure_env.ps1
.github/workflows/: cmake.yml
bootloader/: CMakeLists.txt  chain_test.c  main.c
docs/: ai-tuning-reference.html  index.html
docs/assets/: site.css
firmware_release_history/: CHANGELOG.md  ISSUE_LEDGER.md  README.md
firmware_release_history/releases/2026.06.11-beta.1/: RELEASE_NOTES.md
firmware_release_history/releases/2026.06.11-beta.2/: RELEASE_NOTES.md
firmware_release_history/releases/2026.06.16-beta.8/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.10-beta.9/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.12-beta.10/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.12-beta.11/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.12-beta.12/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.12-beta.13/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.12-beta.14/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.15-beta.12/: RELEASE_NOTES.md
firmware_release_history/releases/2026.07.15-beta.15/: RELEASE_NOTES.md
linker/: memmap_app.ld  memmap_bootloader.ld
linker/app_flash_region/: pico_flash_region.ld
linker/bootloader_flash_region/: pico_flash_region.ld
scripts/: make_combined_uf2.py
src/: ai_tuning.c  ai_tuning.h  app.c  charge_mode.cpp  configuration.h  flash_storage.h  gpio_irq_handler.h  lwipopts_examples_common.h  mini_12864_module.cpp  neopixel_led.c  ota_layout.h  ota_update.c  ota_update.h  rest_ai_tuning.c
src/html/: web_portal.html
targets/: raspberrypi_pico2_w_config.h
tests/: web_test.py
